--- a/src/views/auth/registro.ejs
+++ b/src/views/auth/registro.ejs
@@ -89,8 +89,8 @@
           <div class="mt-1 flex rounded-md shadow-sm">
             <select name="pais" id="pais"
               class="inline-flex items-center px-3 rounded-l-md border border-gray-300 bg-gray-50 text-gray-700 text-sm focus:outline-none">
-              <option value="V">V-</option>
-              <option value="E">E-</option>
+              <option value="1">V-</option>
+              <option value="0">E-</option>
             </select>
             <input type="text" id="cedula" name="cedula" placeholder="28051690" required
               class="flex-1 block w-full px-3 py-2 border border-gray-300 rounded-r-md focus:outline-none focus:ring focus:border-blue-500"/>
