ya se arreglo el perfil ya se puede entrar y ver los datos de usuario incluyendo la foto de perfil

--- a/src/views/admin/gestionUsuario.ejs
+++ b/src/views/admin/gestionUsuario.ejs
@@ -187,7 +187,7 @@
                   </div>
                   <div>
                     <label class="block text-sm font-semibold">Pais</label>
-                    <select name="pais" class="w-full border p-2 rounded">
+                    <select name="pais" id="pais" class="w-full border p-2 rounded">
                       <option value="v">V-</option>
                       <option value="e">E-</option>
                     </select>
