--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -39,7 +39,7 @@
               </span>
             </div>
             <div class="py-1">
-              <a href="/<%= user && user.rol ? user.rol.toLowerCase() : 'admin' %>/perfil" 
+              <a href="/perfil" 
                 class="flex items-center px-4 py-3 text-sm text-gray-700 hover:bg-blue-50 transition">
                 <i class="bi bi-person mr-2"></i> Mi Perfil
               </a>
